# SpyPlane

./: .dockerignore  .editorconfig  .env.sample  .gitignore  CHANGELOD.md  CODEOWNERS  Dockerfile  README.md  entrypoint.sh  export.sql  export_scout_history.sh  flyway.conf  generated_requirements.txt  localrun.sh  pyproject.toml  release.sh  setup.py
.github/workflows/: build.yml
db/: recreate.sh  test_recreate.sh
db/data/: README.md  spyplane_import.sql
db/migrations/: V0001__create_systems.sql  V0002__create_scout_systems.sql  V0003__create_scout_history.sql  V0004__create_configuration.sql  V0005__recreate_scout_systems.sql  V0006__daily_interval_config.sql
deploy/app/: spyplane_deploy.sh  spyplane_env.list
deploy/spy/: env.list  redeploy.sh
ptn/spyplane/: application.py  bot.py  constants.py  spy.py
spyplane/: commands.py  constants.py  listeners.py  main.py  spy_plane.py  tick_detection.py
spyplane/database/: base_repository.py  config_repository.py  scout_history_repository.py  systems_repository.py
spyplane/messaging/: systems_posting.py
spyplane/models/: config.py  scout_history.py  scout_system.py  system_state.py
spyplane/services/: config_service.py  daily_faction_state_service.py  ebgs_service.py  sync_service.py  (+4 more)
tests/: test_base_repository.py  test_commands_without_discord.py  test_config_repository.py  test_ebgs_service.py  test_post_after_tick_service.py  test_scout_history_repository.py  test_spreadsheet_helper.py  test_spreadsheet_reader.py  test_sync_service.py  test_systems_posting_service.py  test_systems_repository.py
(+24 files in other folders)
