[tool.poetry]
name = "spyplane"
version = "0.1.0"
description = "PTN Spy Plane"
authors = ["PTN Devs"]

[tool.poetry.scripts]
spy = "spyplane.main:run"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.20.0"
"discord.py" = { git = "https://github.com/Rapptz/discord.py", rev = "334ef1d7facce9dbfba2a6924bf57fc59bc827b5" }
aiosqlite = "^0.17.0"
gspread = "^5.4.0"
aiocron = "^1.8"
jq = "^1.2.2"
pytz = "^2022.1"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[tool.black]
line-length = 120
target-version = ['py39']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
